--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
 
     android:background="@drawable/border"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/imgHero"
